--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-fastapi==0.104.1
-flet==0.13.0
-flet-core==0.13.0
-flet-runtime==0.13.0
-openai==1.3.0
-uvicorn==0.24.0.post1
-
+fastapi==0.105.0
+flet==0.15.0
+nltk==3.8.1
+openai==1.3.8
+scikit_learn==1.3.2
