--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "Flet",
-  "short_name": "Flet",
+  "name": "TintoChat",
+  "short_name": "TintoChat",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0175C2",
-  "description": "Flet - the fastest way to build Flutter apps in Python",
+  "description": "TintoChat feito em flet",
   "orientation": "natural",
   "prefer_related_applications": false,
   "icons": [
