--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Tinto",
-  "short_name": "Flet",
+  "short_name": "Tinto",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
