--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
